--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     implementation libs.activity
     implementation libs.constraintlayout
     implementation libs.mpandroidchart
-
+    implementation libs.recyclerview
+    implementation libs.car.ui.lib
 
 
     testImplementation libs.junit
