--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.AhorroZen_Grupo01"
         tools:targetApi="31">
         <activity
+            android:name=".miCuenta"
+            android:exported="false" />
+        <activity
+            android:name=".registro_gastos"
+            android:exported="false" />
+        <activity
             android:name=".categorias"
             android:exported="false" />
         <activity
