--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.AhorroZen_Grupo01"
         tools:targetApi="31">
         <activity
+            android:name=".registrarse"
+            android:exported="false" />
+        <activity
+            android:name=".login"
+            android:exported="false" />
+        <activity
+            android:name=".cambiarContra"
+            android:exported="false" />
+        <activity
             android:name=".miCuenta"
             android:exported="false" />
         <activity
